Added payments and balance endpoints
