# app/models/payment.rb
@@ -6,4 +6,13 @@ class Payment < ApplicationRecord
 
   validates :amount, presence: true
   validates :amount, numericality: { only_integer: true, greater_than: 0 }
+
+  def as_json(options = {})
+    {
+      account_id:     options[:account_id],
+      transaction_id: id,
+      amount:,
+      created_at:
+    }.compact
+  end
 end
